# fp2022

./: tasks.md
C/demos/: demoInterpret.ml
C/lib/: Pprintast.ml  dune  interpret.ml
Lua-studokim/: Lua.opam  README.md  REPL.ml  dune-project
Lua-studokim/QCtest/: QCTests.ml  dune
Lua-studokim/demos/: demoAO.ml  demoNO.ml  demoParse.ml  dune
Lua-studokim/lib/: dune
OCamlPV/: OCamlPV.opam  README.md  REPL.ml  dune  dune-project
OCamlPV/demos/: demo.ml  demo.t  demostdlib.ml  demostdlib.t  dune
OCamlPV/lib/: Pprinttypedtree.ml  Pprintvalue.ml  ast.ml  dune  inferencer.ml  inferencer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  printer.ml  stdlib.ml  typedtree.ml  utils.ml
bash/: REPL.ml  bash.opam  dune  dune-project
bash/demos/: demoInterpreter.ml  demoInterpreter.t  demoParser.ml  demoParser.t  dune
bash/lib/: ast.ml  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli
lua/: dune  dune-project
lua/lib/: dune
