(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ilya Pankratov")

(maintainers "Ilya Pankratov")

(bug_reports "https://github.com/i-pankrat/fp2022/")

(package
 (name OCamlPV)
 (synopsis "OCaml with polymorphic variants")
 (description "OCaml with polymorphic variants")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base))
