(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries lua_lib))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries lua_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries lua_lib stdio))

(cram
 (deps
  ./demoNO.exe
  ./demoAO.exe
  ./demoParse.exe
  ../REPL.exe
  ./demo_input.txt))
